# mdt

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  release.toml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/superpowers/plans/: 2026-03-17-live-preview.md
docs/superpowers/specs/: 2026-03-17-live-preview-design.md
src/: app.rs  file_ops.rs  file_tree.rs  integration_tests.rs  main.rs  markdown.rs  palette.rs  test_util.rs  watcher.rs
src/app/: document.rs  event.rs  file_finder.rs  link_picker.rs  mod.rs  state.rs  tests.rs  tree.rs  types.rs  watcher_handlers.rs
src/input/: command.rs  editor.rs  file_ops.rs  mod.rs  mouse.rs  normal.rs  search.rs
src/markdown/: blocks.rs  mod.rs  renderer.rs  syntax.rs  test_helpers.rs  tests.rs  theme.rs  wrap.rs
src/ui/: editor.rs  file_finder.rs  file_list.rs  file_op.rs  help.rs  link_picker.rs  mod.rs  modal.rs  preview.rs  status_bar.rs  theme.rs  welcome.rs
website/: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  README.md  astro.config.ts  package.json
website/.zed/: settings.json
website/src/assets/: index.ts
website/src/components/: FeatureSection.astro  Footer.astro  Hero.astro  InstallCommand.astro  LandingLayout.astro  ThemeToggle.astro
website/src/content/docs/: configuration.mdx  editor.mdx  file-browser.mdx  getting-started.mdx  installation.mdx  keybindings.mdx  live-preview.mdx  search.mdx
website/src/content/docs/blog/: introducing-mdt.mdx  v0.1.0-release.mdx
website/src/pages/: index.astro
website/src/styles/: global.css  landing.css
