[package]
name = "mdt"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tui-tree-widget = "0.24"
ratatui-textarea = "0.8"
unicode-width = "0.2"
anyhow = "1"
