[package]
name = "mdt"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tui-tree-widget = "0.24"
ratatui-textarea = "0.8"
unicode-width = "0.2"
anyhow = "1"
terminal-colorsaurus = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
unnested_or_patterns = "allow"
map_unwrap_or = "allow"
uninlined_format_args = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
items_after_statements = "allow"
unused_self = "allow"
implicit_clone = "allow"
elidable_lifetime_names = "allow"
